bug: Fix null forename and surname (#608)